baml_language/crates/baml_tests/snapshots/compiles/bigint_arith/baml_tests__compiles__bigint_arith__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
function user.AddBigints() -> bigint  [expr] {
  {  } 2n Add 3n
}
function user.BitAndBigints() -> bigint  [expr] {
  {  } 15n BitAnd 240n
}
function user.BitOrBigints() -> bigint  [expr] {
  {  } 15n BitOr 240n
}
function user.BitXorBigints() -> bigint  [expr] {
  {  } 170n BitXor 255n
}
function user.DivBigints() -> bigint  [expr] {
  {  } 7n Div 2n
}
function user.ModBigints() -> bigint  [expr] {
  {  } 7n Mod 2n
}
function user.MulBigints() -> bigint  [expr] {
  {  } 2n Mul 3n
}
function user.ShlBigints() -> bigint  [expr] {
  {  } 1n Shl 4n
}
function user.ShrBigints() -> bigint  [expr] {
  {  } 256n Shr 4n
}
function user.SubBigints() -> bigint  [expr] {
  {  } 5n Sub 3n
}
