baml_language/crates/baml_tests/snapshots/compiles/bigint_arith/baml_tests__compiles__bigint_arith__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.AddBigints() -> bigint {
    // Locals:
    let _0: bigint // _0 // return

    bb0: {
        _0 = const 2n + const 3n;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.BitAndBigints() -> bigint {
    // Locals:
    let _0: bigint // _0 // return

    bb0: {
        _0 = const 15n & const 240n;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.BitOrBigints() -> bigint {
    // Locals:
    let _0: bigint // _0 // return

    bb0: {
        _0 = const 15n | const 240n;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.BitXorBigints() -> bigint {
    // Locals:
    let _0: bigint // _0 // return

    bb0: {
        _0 = const 170n ^ const 255n;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.DivBigints() -> bigint {
    // Locals:
    let _0: bigint // _0 // return

    bb0: {
        _0 = const 7n / const 2n;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.ModBigints() -> bigint {
    // Locals:
    let _0: bigint // _0 // return

    bb0: {
        _0 = const 7n % const 2n;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.MulBigints() -> bigint {
    // Locals:
    let _0: bigint // _0 // return

    bb0: {
        _0 = const 2n * const 3n;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.ShlBigints() -> bigint {
    // Locals:
    let _0: bigint // _0 // return

    bb0: {
        _0 = const 1n << const 4n;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.ShrBigints() -> bigint {
    // Locals:
    let _0: bigint // _0 // return

    bb0: {
        _0 = const 256n >> const 4n;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.SubBigints() -> bigint {
    // Locals:
    let _0: bigint // _0 // return

    bb0: {
        _0 = const 5n - const 3n;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}
