baml_language/crates/baml_tests/snapshots/compiles/bigint_arith/baml_tests__compiles__bigint_arith__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.AddBigints() -> bigint throws never {
  { : 5n
    2n + 3n : 5n
  }
}
function user.SubBigints() -> bigint throws never {
  { : 2n
    5n - 3n : 2n
  }
}
function user.MulBigints() -> bigint throws never {
  { : 6n
    2n * 3n : 6n
  }
}
function user.DivBigints() -> bigint throws never {
  { : 3n
    7n / 2n : 3n
  }
}
function user.ModBigints() -> bigint throws never {
  { : 1n
    7n % 2n : 1n
  }
}
function user.BitAndBigints() -> bigint throws never {
  { : 0n
    15n & 240n : 0n
  }
}
function user.BitOrBigints() -> bigint throws never {
  { : 255n
    15n | 240n : 255n
  }
}
function user.BitXorBigints() -> bigint throws never {
  { : 85n
    170n ^ 255n : 85n
  }
}
function user.ShlBigints() -> bigint throws never {
  { : 16n
    1n << 4n : 16n
  }
}
function user.ShrBigints() -> bigint throws never {
  { : 16n
    256n >> 4n : 16n
  }
}
