baml_language/crates/baml_tests/snapshots/compiles/bigint_arith/baml_tests__compiles__bigint_arith__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function boundary.LocalId.capture(self: boundary.LocalId, inputs: bool | null, output: bool | null, error: bool | null) -> boundary.LocalId {
}

function boundary.id() -> boundary.LocalId {
}

function boundary.id.current() -> string {
}

function reflect.call_any(f: baml.AnyFunction<Returns = #0, Throws = #1>, args: map<string, unknown>) -> #0 {
}

function reflect.signature(f: baml.AnyFunction) -> reflect.Signature {
}

function user.AddBigints() -> bigint {
    load_const 5n
    return
}

function user.BitAndBigints() -> bigint {
    load_const 0n
    return
}

function user.BitOrBigints() -> bigint {
    load_const 255n
    return
}

function user.BitXorBigints() -> bigint {
    load_const 85n
    return
}

function user.DivBigints() -> bigint {
    load_const 3n
    return
}

function user.ModBigints() -> bigint {
    load_const 1n
    return
}

function user.MulBigints() -> bigint {
    load_const 6n
    return
}

function user.ShlBigints() -> bigint {
    load_const 16n
    return
}

function user.ShrBigints() -> bigint {
    load_const 16n
    return
}

function user.SubBigints() -> bigint {
    load_const 2n
    return
}
